[package]
name = "rusty_demon_attack"
version = "0.1.1"
authors = ["TanTanDev <tantangamedev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"

# linear interpolation library
lininterp = "0.1.3"
